# myddns

./: .gitignore  Cargo.toml  README.md  config.toml.example
.github/workflows/: release.yml
.trae/rules/: project_rules.md
src/: cli.rs  config.rs  main.rs  model.rs  utils.rs
